Signview fixes | JUMP bug quickfix

--- a/public/css/docsignview.css
+++ b/public/css/docsignview.css
@@ -19,7 +19,7 @@ body.signview {
   width: 1020px;
   padding-top: 10px;
   padding-bottom: 10px;
-  height: 76px;
+  height: 120px;
   display: table;
   overflow: hidden;
   #position: relative;
